--- a/www/signup.html
+++ b/www/signup.html
@@ -66,15 +66,16 @@
         <img id="signupbtn" src="./img/getstarted.svg" alt="Login button" />
     </div>
     <br><br><br>
-    <!-- Debug : only for Development -->
-    <div class="d-flex justify-content-center ">
-        <button id="logoutbtn" class="btn btn-info">Logout</button>
-        <button id="adminlogin" class="btn btn-warning">Admin Login</button>
-    </div>
-    <div class="d-flex justify-content-center ">
-        <p>Current user : <span id="currentuser">no user</span></p>
-    </div>
-    <!-- Debug : only for Development -->
+    <footer>
+        <!-- Debug : only for Development -->
+        <div class="d-flex justify-content-center ">
+            <button id="logoutbtn" class="btn btn-info">Logout</button>
+            <button id="adminlogin" class="btn btn-warning">Admin Login</button>
+        </div>
+        <div class="d-flex justify-content-center ">
+            <p>Current user : <span id="currentuser">NULL</span></p>
+        </div>
+    </footer>
 
     <!-- Inline firebase script -->
     <script type="module">
