--- a/www/choosetopic.html
+++ b/www/choosetopic.html
@@ -24,8 +24,7 @@
     </div>
 
     <div class="container-fluid row d-flex justify-content-center">
-        <div id="chatbotbtn" class=" grayscale col-sm-12-sm tiles tilebox m-1 cursorhover"
-            style="background-color: #F9B08F;">
+        <div id="chatbotbtn" class="  col-sm-12-sm tiles tilebox m-1 cursorhover" style="background-color: #F9B08F;">
             <img src="./img/increasehappiness.svg" alt="increasehappiness Image">
             <p class=" lightbg p-2 text-center">Chat Bot</p>
         </div>
@@ -60,15 +59,16 @@
 
     </div>
 
-    <!-- Debug : only for Development -->
-    <div class="d-flex justify-content-center ">
-        <button id="logoutbtn" class="btn btn-info">Logout</button>
-        <button id="adminlogin" class="btn btn-warning">Admin Login</button>
-    </div>
-    <div class="d-flex justify-content-center ">
-        <p>Current user : <span id="currentuser">NULL</span></p>
-    </div>
-    <!-- Debug : only for Development -->
+    <footer>
+        <!-- Debug : only for Development -->
+        <div class="d-flex justify-content-center ">
+            <button id="logoutbtn" class="btn btn-info">Logout</button>
+            <button id="adminlogin" class="btn btn-warning">Admin Login</button>
+        </div>
+        <div class="d-flex justify-content-center ">
+            <p>Current user : <span id="currentuser">NULL</span></p>
+        </div>
+    </footer>
 
 
     <!-- Inline JavaScript -->
