--- a/www/login.html
+++ b/www/login.html
@@ -52,15 +52,16 @@
         <p>DON'T HAVE AN ACCOUNT ? <a href="signup.html">SIGN UP</a></p>
     </div>
 
-    <!-- Debug : only for Development -->
-    <div class="d-flex justify-content-center ">
-        <button id="logoutbtn" class="btn btn-info">Logout</button>
-        <button id="adminlogin" class="btn btn-warning">Admin Login</button>
-    </div>
-    <div class="d-flex justify-content-center ">
-        <p>Current user : <span id="currentuser">NULL</span></p>
-    </div>
-    <!-- Debug : only for Development -->
+    <footer>
+        <!-- Debug : only for Development -->
+        <div class="d-flex justify-content-center ">
+            <button id="logoutbtn" class="btn btn-info">Logout</button>
+            <button id="adminlogin" class="btn btn-warning">Admin Login</button>
+        </div>
+        <div class="d-flex justify-content-center ">
+            <p>Current user : <span id="currentuser">NULL</span></p>
+        </div>
+    </footer>
 
     <!-- Inline JS Code -->
     <script type="module">
