--- a/www/template.html
+++ b/www/template.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-
+    <iframe width="640" height="480" frameBorder="0" src="https://edu.cospaces.io/YNT-HMT"></iframe>
 
 
     <!-- Inline JS Code -->
